@@ -22,6 +22,7 @@ from cliff.show import ShowOne
 from shaddock.drivers.docker.container import Container
 from shaddock.model import ModelDefinition
 from shaddock.scheduler import Scheduler
+from shaddock.drivers.docker.api import DockerApi
 
 
 class Create(ShowOne):
@@ -164,7 +165,7 @@ class List(Lister):
 
         hl = []
         model = ModelDefinition(self.app_args)
-        for cluster in model._get_clusters_list():
+        for cluster in model.cluster_list:
             if cluster.get('hosts') is not None:
                 for host in cluster.get('hosts'):
                     hl.append(host)
@@ -183,19 +184,22 @@ class List(Lister):
         hl = [dict(t) for t in set([tuple(d.items()) for d in hl])]
 
         infos = []
-        print(hl)
         for host in hl:
-            docker_api = DockerApi(host)
-            docker_client = docker_api.connect()
-            host_info = docker_client.containers(all=True)
-            for info in host_info:
-                infos.append(info)
+            try:
+                docker_api = DockerApi(host)
+                docker_client = docker_api.connect()
+                host_info = docker_client.containers(all=True)
+                for info in host_info:
+                    infos.append(info)
+            except Exception:
+                print("Failed to establish a new connection to"
+                      " {} at {}.".format(host.get('name'), host.get('url')))
 
         columns = ('#', 'Cluster', 'Name', 'State', 'Host', 'IP', 'Image')
         l = ()
         for svc in model.get_services_list():
             svc_cfg = model.get_service(svc['name'])
-            c = Container(svc['name'], svc_cfg)
+            c = Container(svc['name'], svc_cfg, infos)
             host = c.cfg.get('host', 'localhost')
             ip = c.info.get('Ip')
             priority = c.cfg.get('priority', '')
