@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Fix scheduling mono service
 * -2 Unworking but devided ps time by 2
 * Flake8
 * Add default file shaddock.yml
